[gd_scene load_steps=2 format=2]

[ext_resource path="res://scene/infobar.gd" type="Script" id=1]

[node name="infobar" type="ColorRect"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 33 )
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )

[node name="item_info" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
grow_horizontal = 2
align = 1
valign = 1

[node name="lives_counter" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
valign = 1

[node name="score_counter" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -7.0
margin_bottom = 7.0
grow_horizontal = 0
text = "Score: 0"
